--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.14.0",
     "webpack-dev-middleware": "^4.1.0",
     "webpack-dev-server": "^3.11.2"
