--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1"
+    "webpack": "^5.14.0"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "webpack-cli": "^3.3.12"
   }
 }
