--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.1",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1"
+    "webpack": "^5.14.0"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "webpack-cli": "^3.3.12"
   }
 }
