--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "http-server dist"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,9 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.1",
-    "webpack": "^5.14.0"
+    "http-server": "^0.12.3",
+    "webpack": "^5.14.0",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
     "lodash": "^4.17.20",
