--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.167",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
     "webpack": "^5.14.0"
   },
   "dependencies": {
